fix background on firefox fullscreen.

--- a/index.css
+++ b/index.css
@@ -13,6 +13,12 @@ canvas {
 	border-top: 1px solid black;
 }
 
-*:fullscreen, *:-webkit-full-screen, *:-moz-full-screen {
-    background-color: rgba(255, 255, 255, 1.0);
+canvas:fullscreen {
+    background-color: rgba(255,255,255,1);
+}
+canvas:-webkit-full-screen {
+    background-color: rgba(255,255,255,1);
+}
+canvas:-moz-full-screen {
+    background-color: rgba(255,255,255,1);
 }
